# vulkan-editor

./: .gitignore  CMakeLists.txt  README.md  build.ps1  implementation_plan.md
include/: Camera.h  EditorApp.h  Renderer.h  VulkanContext.h
shaders/: mesh.frag  mesh.vert
src/: EditorApp.cpp  Renderer.cpp  VulkanContext.cpp  main.cpp
